# roguelike

./: Cargo.toml  README.md
dungeon-outputs/: README.md
resources/raws/: colors.ron  raws.ron
resources/rex/: dungeon02_80x60.xp  dungeon03_60x60.xp  dungeon80x60.xp  level01_80x60.xp  small_6x6.xp  wfc_14x8.xp  wfc_15x15.xp  wfc_20x20.xp  wfc_20x20_1.xp  wfc_20x20_2.xp  wfc_20x20_3.xp  wfc_20x20_4.xp  wfc_20x20_5.xp  wfc_20x20_6.xp  wfc_29x9.xp  wfc_4x4.xp  wfc_5x5.xp  wfc_6x6.xp  wfc_6x6_2.xp  wfc_6x6_3.xp  wfc_6x6_internal.xp  wfc_8x8.xp  wfc_8x8_1.xp  wfc_9x9.xp  wfc_9x9_1.xp
src/: common.rs  components.rs  input.rs  killer.rs  log.rs  main.rs  player.rs  renderer.rs  rexloader.rs  spawner.rs  state.rs
src/map_gen/: bsp_tree.rs  cellular_automata.rs  common.rs  custom_region.rs  digger.rs  map.rs  mod.rs  prefab_map.rs  prefab_section.rs  random_walk.rs  region.rs  room.rs  tile.rs  tunnel.rs
src/map_gen/wfc/: cell.rs  common.rs  mod.rs  wave.rs
src/raws/: color_structs.rs  common_structs.rs  container_structs.rs  furniture_structs.rs  item_structs.rs  mob_structs.rs  mod.rs  rawcolors.rs  rawmaster.rs  spawn_structs.rs
src/systems/: ai.rs  consumable.rs  damage.rs  equipment.rs  fov.rs  item_collect.rs  item_drop.rs  mapping.rs  melee.rs  missile.rs  mod.rs  weapon_reload.rs
src/ui/: common.rs  container.rs  equipment.rs  hud.rs  inventory.rs  menu.rs  mod.rs  popup.rs  tooltips.rs
src/utils/: colors.rs  directions.rs  mod.rs
