[package]
name = "tcc-ufsm-2020"
version = "0.1.0"
authors = ["pprobst <pprobst@insiberia.net>"]
edition = "2018"
keywords = ["game", "roguelike"]
categories = ["games"]

[dependencies]
bracket-lib = { version = "0.8.1", optional = true, default-features = false, features = ["threaded", "specs", "serde"] }
lazy_static  = "1.4.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
specs-derive = "0.4.1"
ron          = "0.6.0"
serde        = { version = "1.0.106", features = [ "derive" ] }
serde_ron    = { version = "0.6", package = "ron", optional = true }
strum        = "0.19"
strum_macros = "0.19"

[features]
default = ["bracket-lib/opengl"]
console = ["bracket-lib/crossterm"]
